--- a/extension/popup/styles/_video-items.scss
+++ b/extension/popup/styles/_video-items.scss
@@ -303,7 +303,8 @@
 
     &:not(.btn-default) {
         .download-btn {
-            width: 100%
+            width: 100%;
+            border-radius: 6px;
         }
 
         .download-menu-btn {
