--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -163,7 +163,8 @@
 }
 
 .history-play-btn,
-.history-folder-btn {
+.history-folder-btn,
+.history-retry-btn {
     background: none;
     border: none;
     padding: 2px;
