--- a/extension/popup/styles/_navigation.scss
+++ b/extension/popup/styles/_navigation.scss
@@ -222,41 +222,6 @@
         background-color: var(--color-green);
     }
     &[data-tab-id="settings-tab"].active {
-        background-color: var(--color-yellow);
-    }
-}
-
-.tab-counter {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    padding: 0 4px;
-    font-size: var(--font-body);
-    font-weight: 600;
-    line-height: 1;
-    transition: all var(--transition-fast);
-
-    .theme-dark & {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: var(--text-primary-dark);
-    }
-
-    .theme-light & {
-        background-color: rgba(0, 0, 0, 0.1);
-        color: var(--text-primary-light);
-    }
-
-    // Active tab counter styling
-    .tab-button.active & {
-        background-color: rgba(255, 255, 255, 0.3);
-        color: white;
-    }
-
-    // Hide counter when count is 0
-    &:empty {
-        display: none;
+        background-color: var(--color-orange);
     }
 }
