upd: incl bitrate from ffmpeg output into downloadStats
new: now we use final dl bitrate instead of orig video's resolution to display in quality element in history item for audioOnly param

fix: open dropdown is hidden in scss for downloads section (for cases where it was copied while being open)

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -1734,7 +1734,7 @@ header .heading-row {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.downloads-container .active-downloads-section .video-item .dropdown-icon, .downloads-container .active-downloads-section .video-item .dismiss-button {
+.downloads-container .active-downloads-section .video-item .dropdown-icon, .downloads-container .active-downloads-section .video-item .dismiss-button, .downloads-container .active-downloads-section .video-item .options-container {
   display: none;
 }
 .downloads-container .active-downloads-section .video-item .selected-option {
