upd: styles for type badge on history-items

--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -348,16 +348,16 @@
         display: inline-block;
         font-weight: 500;
         padding: 2px 6px;
-        border-radius: 10px;
-        
+        border-radius: 6px;
+
         .theme-dark & {
-            background-color: var(--text-primary-dark);
-            color: var(--bg-secondary-dark);
+            color: var(--text-secondary-dark);
+            border: 1px solid var(--text-secondary-dark)
         }
         
         .theme-light & {
-            background-color: var(--text-primary-light);
-            color: var(--bg-secondary-light);
+            color: var(--text-secondary-light);
+            border: 1px solid var(--text-secondary-light);
         }
     }
 
