fix: loader is not shown in active downloads if by the time of dl preview was not generated

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -1723,8 +1723,11 @@ header .heading-row {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.downloads-container .active-downloads-section .video-item .dropdown-icon, .downloads-container .active-downloads-section .video-item .dismiss-button, .downloads-container .active-downloads-section .video-item .options-container {
+.downloads-container .active-downloads-section .video-item .dropdown-icon, .downloads-container .active-downloads-section .video-item .dismiss-button, .downloads-container .active-downloads-section .video-item .options-container, .downloads-container .active-downloads-section .video-item .loader {
   display: none;
+}
+.downloads-container .active-downloads-section .video-item .preview-image.placeholder {
+  opacity: 1;
 }
 .downloads-container .active-downloads-section .video-item .selected-option {
   cursor: auto;
