--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -12,8 +12,12 @@
     flex-direction: column;
 
     .active-downloads-section .video-item {  
-        .dropdown-icon, .dismiss-button, .options-container {
+        .dropdown-icon, .dismiss-button, .options-container, .loader {
             display: none;
+        }
+
+        .preview-image.placeholder {
+            opacity: 1;
         }
 
         .selected-option {
