--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
 
     .active-downloads-section .video-item {  
-        .dropdown-icon, .dismiss-button, .options-container, .loader {
+        .dropdown-icon, .dismiss-button, .loader, .options-container, .download-menu-dropdown {
             display: none;
         }
 
