new: HLS advanced DD and download logic, fully adapted from DASH to HLS, unified in many ways
only run on check of presence of audioTracks

fix for audioCodec to check first if codecs are present and there's no audioCodec -> skip, if codecs not present -> fallback to default (we can't validate absence)

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -657,7 +657,7 @@ header .heading-row {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-.custom-dropdown[data-type=dash] .options-container {
+.custom-dropdown.advanced .options-container {
   width: 404px;
   left: -115px;
 }
