--- a/extension/popup/styles/_layout.scss
+++ b/extension/popup/styles/_layout.scss
@@ -16,16 +16,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100px;
     text-align: center;
     font-size: var(--font-h2);
+    border-radius: 16px;
+    min-height: 76px;
 
     .theme-dark & {
+        background-color: var(--bg-secondary-dark);
+        border: 1px solid var(--border-primary-dark);
         color: #aaa;
     }
 
     .theme-light & {
-        color: #757575;
+        background-color: var(--bg-element-light);
+        box-shadow: var(--bg-element-shadow-light);
+        color: #757575;;
     }
 
     svg {
@@ -201,6 +206,41 @@ header {
 
         .theme-light & {
             color: var(--text-secondary-light);
+        }
+    }
+}
+
+// =====================================================
+// SETTINGS CONTAINER
+// =====================================================
+
+.settings-container {
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    gap: 8px;
+    height: 100%;
+    overflow-y: auto;
+
+    .settings-section {
+        display: flex;
+        flex-direction: column;
+        border-radius: 8px;
+        overflow: hidden;
+
+        .theme-dark & {
+            background-color: var(--bg-secondary-dark);
+            border: 1px solid var(--border-primary-dark);
+        }
+
+        .theme-light & {
+            background-color: var(--bg-element-light);
+            box-shadow: var(--bg-element-shadow-light);
+        }
+
+        .section-content {
+            gap: 12px;
+            padding: 12px;
         }
     }
 }
