upd: settings for map for scss and upd in layout for init-msg

--- a/extension/popup/styles/_layout.scss
+++ b/extension/popup/styles/_layout.scss
@@ -21,6 +21,10 @@
     border-radius: 16px;
     min-height: 76px;
 
+	#videos-list & {
+		margin: 8px;
+	}
+
     .theme-dark & {
         background-color: var(--bg-secondary-dark);
         border: 1px solid var(--border-primary-dark);
